people: Fix strechted profiles on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,7 @@ a:focus span
 .imgme {
   border: 1px solid black;
   height: 125px;
+  width: 125px;
   /* float: left; */
 }
 #htname {
